--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,12 @@
     <string name="home">Home</string>
     <string name="statistics">Statistics</string>
     <string name="records">Records</string>
-    <string name="last_measurement">Last Measurement</string>
+    <string name="last_measurement">Last measurement</string>
+    <string name="add">Add</string>
+    <string name="cancel">Cancel</string>
+    <string name="new_measurement">New measurement</string>
+    <string name="data">Data</string>
+    <string name="current_data">Current data</string>
 
     <string name="date">Date</string>
     <string name="weight">Weight</string>
